# Fot_lab_Klishin

lab10/: Makefile  func_lab.c  head.h  lab_ten  lab_ten.c
lab11/: a.out  lab  lab11  lab11.c  lab11_two.c  lab_two
lab12/task0/: Makefile  main
lab12/task1/: CMakeLists.txt
lab12/task1/background/: CMakeLists.txt
lab12/task1/pipes/: CMakeLists.txt
lab6/: proba  proba.c
lab7/: lab_seven_new.c
lab8/: lab_eight  lab_eight.c
lab8XXL/: lab_eightxl  lab_eightxl.c
lab9/: lab_nine  lab_nine.c
labGit/: sort.c
Лаба 3/: fifteen.c  fourteen.c  sixteen  thirteen.c  twent.c
Лаба 4/: four_lab.c
Лаба 5/: five_lab.c  five_lab_two.c
